# backend/router/system/sys_menu.go
@@ -9,7 +9,7 @@ func (m *MenuRouter) InitMenuRouter(Router *gin.RouterGroup) {
 	router := Router.Group("menu")
 	routerWithout := Router.Group("menu")
 	{
-		router.POST("addItem", menuApi.AddMenuItem)   //新增菜单
+		router.POST("create", menuApi.CreateMenuItem) //新增菜单
 		router.POST("del", menuApi.DelMenuItem)       //删除菜单
 		router.POST("update", menuApi.UpdateMenuItem) //更新菜单
 	}
